river.css
html, body {
	height: 100%;
	overflow: hidden;
}

body {
	background: #ddd;
	cursor: default;

	display: -webkit-flex;
	display: flex;

	-webkit-flex-direction: column;
	flex-direction: column;

	font-family: sans-serif;
	margin: 0;

	-webkit-user-select: none;
	user-select: none;
}

body, .search {
	font-size: 16px;
}

.search, .control {
	background: white;
}

.search {
	-webkit-appearance: none;
	box-sizing: border-box;
	border-radius: 0;
	border: none;
	display: block;
	outline: none;
	margin: 0;
}

.search, .song, .control {
	padding: 10px;
}

.search, .control {
	box-shadow: 0 0 2vh #aaa;
	z-index: 1;
}

.songs {
	background: #ddd;

	-webkit-flex: 1;
	flex: 1;

	-webkit-overflow-scrolling: touch;
	overflow-y: scroll;
}

.song {
	background: white;
}

.songs > * {
	margin-bottom: 2px;
}

.songs > :last-child {
	margin-bottom: 0px;
}

.songs.searching > :not(.match) {
	display: none;
}

.tag {
	overflow: hidden;
}

.tag:not(.title) {
	color: grey;
	font-size: 14px;
}

.title {
	color: black;
	font-weight: bold;
}

.control:not(.loading) {
	cursor: pointer;
}

.control:not(.loading):not(.playing):not(.paused) {
	display: none;
}

.control.loading {
	-webkit-animation: pulse 1s ease infinite;
	animation: pulse 1s ease infinite;
}

@-webkit-keyframes pulse {
	0% {
		background: white;
	}
	50% {
		background: #ddd;
	}
	100% {
		background: white;
	}
}

@keyframes pulse {
	0% {
		background: white;
	}
	50% {
		background: #ddd;
	}
	100% {
		background: white;
	}
}

.control.paused:not(.loading) {
	background: #ddd;
}

